fix(ui5-avatar): tooltip is now visible on badge

--- a/packages/main/src/themes/Avatar.css
+++ b/packages/main/src/themes/Avatar.css
@@ -252,6 +252,7 @@
 
 /* Slotted Badge */
 ::slotted([slot="badge"]) {
+	pointer-events: initial;
 	position: absolute;
 	bottom: 0;
 	right: 0;
